Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0.25
-
Fix Version/s: 5.5.51
-
Component/s: Plugin - Audit
-
Labels:
-
Sprint:10.2.2-3
Description
In frames of fix for MDEV-9106 new variable was added for Audit Plugin, server_audit_loc_info. It is initialized with zeros and is supposed to be empty string in MTR tests, as far as I can see.
I wonder what values are expected there while working with MySQL 5.7 and with older MySQL/MariaDB versions. Please, document this clearly in the code and/or in a separate KB article. I see nothing about it at https://mariadb.com/kb/en/mariadb/server_audit-system-variables/, while it seems to have non-empty values at times.
Attachments
Issue Links
- relates to
-
MDEV-11191 server_audit from 10.0.28 crashes on MySQL 5.7
-
- Closed
-
-
MDEV-10905 PLUGIN_VAR_NOSYSVAR | PLUGIN_VAR_NOCMDOPT thdvars don't work
-
- Closed
-